# Dengue_Diagnostics

./: .gitignore  README.md  final_q_table.pkl  pyproject.toml  q_table.pkl  q_table.txt
agents/: __init__.py  agent_qlearning.py  agent_random.py  expsarsa_agent.py  final_q_table.pkl  ppo.py  q_table.pkl  q_table.txt  qlearning_agent.py  random_agent.py  teste.ipynb
dengue_envs/: __init__.py  viz.py
dengue_envs/data/: generator.py
dengue_envs/envs/: README.md  __init__.py  dengue_diagnostics.py  dengue_diagnostics_render.py
dengue_envs/tests/: test_dengue_diagnostics.py  test_world.py
dengue_envs/wrappers/: __init__.py
